# Production-Architecture-Agent

./: .gitignore  CLAUDE.md  README.md
evaluations/: runner.py
evaluations/scenarios/: 01-greenfield-react.yaml  02-existing-python-api.yaml  03-cicd-github-actions.yaml  04-testing-strategy.yaml  05-deployment-canary.yaml  06-monitoring-setup.yaml  07-gate-validation.yaml  08-incident-response.yaml  09-multi-phase-transition.yaml  10-template-scaffolding.yaml
reference/: integration_catalog.md  phase_gates.md  sdlc_overview.md
scripts/: gate_validator.py  init_sdlc.py  orchestrate.py  project_health.py
skills/01-requirements/: SKILL.md
skills/01-requirements/reference/: prd_template.md  user_story_guide.md
skills/01-requirements/scripts/: gather_requirements.py  validate_prd.py
skills/02-development/: SKILL.md
skills/02-development/reference/: commit_conventions.md  git_workflow.md
skills/02-development/scripts/: init_project.sh  setup_git_hooks.sh
skills/03-cicd/: SKILL.md
skills/03-cicd/reference/: pipeline_patterns.md
skills/03-cicd/scripts/: generate_pipeline.py
skills/04-testing/: SKILL.md
skills/04-testing/reference/: performance_testing.md  testing_pyramid.md
skills/04-testing/scripts/: coverage_analyzer.py  (+1 more)
skills/05-uat/: SKILL.md
skills/06-deployment/: SKILL.md
skills/07-monitoring/: SKILL.md
templates/nextjs-typescript/: SDLC.md  package.json
templates/python-fastapi/: Dockerfile  SDLC.md  pyproject.toml
templates/python-fastapi/app/: main.py
templates/react-typescript-vite/: SDLC.md  package.json  vite.config.ts
(+16 files in other folders)
